%changelog
* Sun Oct 17 2021 Roveda <roveda@universal-logging-system.org> 1.0-27
2021-10-17: Corrected the retrieval of usage in tablespace_usage().

* Sun May 30 2021 Roveda <roveda@universal-logging-system.org> 1.0-26
2021-05-29: Added NO_ALERT_LOG as option in configuration file.

* Wed Mar 17 2021 Roveda <roveda@universal-logging-system.org> 1.0-25
2021-03-17: Changed 'blocking sessions' in watch_oracle.pl (now version 1.00).
2021-02-05: Added the number of inactive online redo logs to watch_oracle.pl.

* Wed Jan 20 2021 Roveda <roveda@universal-logging-system.org> 1.0-24
2021-01-18: The sga size is only sent once a day in watch_oracle.pl if it does not change.

* Thu Nov 26 2020 Roveda <roveda@universal-logging-system.org> 1.0-23
2020-11-26: implemented a smooth change to new workfile in watch_oracle.pl, 
no reset to beginning of alert.log. 

* Thu Oct 01 2020 Roveda <roveda@universal-logging-system.org> 1.0-22
2020-10-01: merged the preliminary watch_oracle_pdbs.pl script into watch_oracle.pl.
Changed crontab file back to one entry.

* Tue Sep 01 2020 Roveda <roveda@universal-logging-system.org> 1.0-21
2020-09-01: Wrong timestamp for 'maintenance window start-stop' corrected.
2020-08-30: Enhanced version of watch_oracle_pdbs.pl.
2020-08-16: Added '--force' to compress commands in Misc.pm
2020-08-01: Added watch_oracle_pdbs.pl and .sh as a beta version.
watch_oracle.pl: For Oracle version 18+ the full version is retrieved.

* Thu Mar 05 2020 Roveda <roveda@universal-logging-system.org> 1.0-20
2020-03-05: watch_oracle.pl: implemented a workaround for 'ORA-' expressions in
dba_autotask_job_history.job_info in sub auto_optimizer_stats_collection().
Added special filter for alert.log entries witch contain ORA- expressions,
but as patch description and not as real error entry.
2019-12-27: watch_oracle.pl: implemented a workaround for 'ORA-' expressions in
dba_autotask_job_history.job_info in sub auto_optimizer_stats_collection().