@@ -3,6 +3,8 @@
 The ULS Client for Oracle databases is the GPLv3-based agent for gathering runtime metrics 
 and status information and logging configuration settings on Oracle database instances 
 running on Unix-like operating systems. All gathered data is sent to an ULS server. 
-It works for the 9i, 10g, 11g, 12c and 19c (in development) versions of the Oracle RDBMS. 
+It works for the 9i, 10g (although this has not been tested for a long time), 11g, 12c and 
+19c (multitenant or not) versions of the Oracle RDBMS. 
+
 See www.universal-logging-system.org for more information.
 
